@@ -31,6 +31,8 @@ import importlib
 import itertools
 import gc
 import datetime
+import subprocess
+import shutil
 from array import array
 from . import plugin_cost_profiler as _pcp
 from .learnable_param import LearnableParam
@@ -47,6 +49,101 @@ try:
     os.environ.setdefault("PYTORCH_DISABLE_NNPACK", "1")
 except Exception:
     pass
+
+
+def _load_snapshot_config() -> Dict[str, Any]:
+    """Best-effort loader for snapshot configuration values."""
+
+    try:
+        import yaml  # type: ignore
+    except Exception:
+        return {}
+
+    base = os.path.dirname(os.path.dirname(__file__))
+    path = os.path.join(base, "config.yaml")
+    try:
+        with open(path, "r", encoding="utf-8") as handle:
+            data = yaml.safe_load(handle) or {}
+        snapshot_cfg = data.get("snapshot", {}) if isinstance(data, dict) else {}
+        return snapshot_cfg if isinstance(snapshot_cfg, dict) else {}
+    except Exception:
+        return {}
+
+
+def _coerce_snapshot_compress_level(value: Any, default: int = 2) -> int:
+    try:
+        level = int(value)
+    except Exception:
+        return default
+    return max(1, min(9, level))
+
+
+_SNAPSHOT_CONFIG = _load_snapshot_config()
+_DEFAULT_SNAPSHOT_COMPRESS_LEVEL = _coerce_snapshot_compress_level(
+    _SNAPSHOT_CONFIG.get("compress_level"),
+    default=2,
+)
+
+
+_PIGZ_REPO_URL = "https://github.com/madler/pigz.git"
+_PIGZ_PATH: Optional[str] = None
+
+
+def _which_pigz() -> Optional[str]:
+    from shutil import which
+
+    path = which("pigz")
+    if path:
+        return path
+    home_bin = os.path.join(os.path.expanduser("~"), ".local", "bin", "pigz")
+    if os.path.exists(home_bin):
+        return home_bin
+    return None
+
+
+def _install_pigz() -> Optional[str]:
+    tmp_root = tempfile.mkdtemp(prefix="pigz_build_")
+    repo_dir = os.path.join(tmp_root, "pigz")
+    try:
+        clone_cmd = [
+            "git",
+            "clone",
+            "--depth",
+            "1",
+            _PIGZ_REPO_URL,
+            repo_dir,
+        ]
+        subprocess.run(clone_cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE, check=True)
+        subprocess.run(["make"], cwd=repo_dir, stdout=subprocess.PIPE, stderr=subprocess.PIPE, check=True)
+        bin_dir = os.path.join(os.path.expanduser("~"), ".local", "bin")
+        os.makedirs(bin_dir, exist_ok=True)
+        for binary in ("pigz", "unpigz"):
+            src = os.path.join(repo_dir, binary)
+            if os.path.exists(src):
+                dst = os.path.join(bin_dir, binary)
+                shutil.copy2(src, dst)
+                try:
+                    os.chmod(dst, 0o755)
+                except Exception:
+                    pass
+        return _which_pigz()
+    except Exception:
+        return None
+    finally:
+        shutil.rmtree(tmp_root, ignore_errors=True)
+
+
+def _ensure_pigz_path() -> str:
+    global _PIGZ_PATH
+    if _PIGZ_PATH and os.path.exists(_PIGZ_PATH):
+        return _PIGZ_PATH
+    path = _which_pigz()
+    if not path:
+        path = _install_pigz()
+    if not path or not os.path.exists(path):
+        raise RuntimeError("pigz compressor is required for snapshots but could not be installed")
+    _PIGZ_PATH = path
+    return _PIGZ_PATH
 
 from .codec import UniversalTensorCodec, TensorLike
 
@@ -952,6 +1049,7 @@ class Brain:
         self.snapshot_keep = int(snapshot_keep) if snapshot_keep is not None else None
         # Snapshot enforcement policy: by default disallow CPU snapshots when CUDA is available.
         self._allow_cpu_snapshot_when_cuda = False
+        self._snapshot_compress_level = _DEFAULT_SNAPSHOT_COMPRESS_LEVEL
         if self.store_snapshots:
             if not self.snapshot_path:
                 raise ValueError("snapshot_path must be provided when store_snapshots is True")
@@ -2412,12 +2510,36 @@ class Brain:
                 data["codec_state"] = codec_obj.export_state()
             elif hasattr(codec_obj, "dump_vocab"):
                 data["codec_vocab"] = codec_obj.dump_vocab()
-        with gzip.open(target, "wb") as f:
-            pickle.dump(data, f, protocol=pickle.HIGHEST_PROTOCOL)
+        raw_compress_level = getattr(self, "_snapshot_compress_level", _DEFAULT_SNAPSHOT_COMPRESS_LEVEL)
+        compress_level = _coerce_snapshot_compress_level(raw_compress_level, _DEFAULT_SNAPSHOT_COMPRESS_LEVEL)
+        self._snapshot_compress_level = compress_level
+
+        pigz_path = _ensure_pigz_path()
+        tmp_target = f"{target}.tmp"
+        try:
+            payload = pickle.dumps(data, protocol=pickle.HIGHEST_PROTOCOL)
+            with open(tmp_target, "wb") as outfile:
+                subprocess.run(
+                    [pigz_path, f"-{compress_level}", "-c"],
+                    input=payload,
+                    stdout=outfile,
+                    stderr=subprocess.PIPE,
+                    check=True,
+                )
+            os.replace(tmp_target, target)
+        except Exception as exc:
+            try:
+                if os.path.exists(tmp_target):
+                    os.remove(tmp_target)
+            except Exception:
+                pass
+            raise RuntimeError(f"pigz compression failed: {exc}") from exc
         self._last_snapshot_meta = {
             "path": target,
             "time": time.time(),
             "device": "cuda" if use_cuda_for_snapshot else "cpu",
+            "compress_level": compress_level,
+            "compressor": "pigz",
         }
         # Retention: keep only the newest N snapshots if configured
         if getattr(self, "snapshot_keep", None) is not None:
